--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "plugins": []
   },
   "include": [
-    "src"
+    "src",
+    "declaration.d.ts"
   ]
 }
