--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.68",
-    "@types/randomcolor": "^0.5.6",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "color-convert": "^2.0.1",
+    "@types/tinycolor2": "^1.4.3",
+    "array-move": "^4.0.0",
     "framer-motion": "^7.6.1",
-    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
-    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "tinycolor2": "^1.4.2",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
